# BeThere

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DISCUSSION.md  Dockerfile  README.md  docker-compose.yml
.design/: brief.md
.design/stitch/: admin-attendees.html  admin-overview.html  admin-qr.html  claim-loading.html  claim-ready.html  claim-success.html  landing-desktop.html  landing-mobile.html  scanner-active.html  scanner-success.html
.handovers/: 001_compilation_fix_and_cleanup.md  002_smoke_test_and_middleware_fix.md  003_p1_p2_production_readiness.md  004_cookie_auth_fix_and_frontend.md  005_participation_type_and_preview_mode.md  006_admin_badges_nonstaff_rejection_qr_force.md  007_leptos_08_upgrade_and_refactoring.md  008_system_review_and_next_steps.md  009_workers_crypto_http_handlers.md  010_column_b_name_fix.md  011_staff_checkin_log_and_sheet_staff.md  012_legacy_cleanup_and_deployment_readiness.md  013_production_deployment_and_housekeeping.md  014_solana_integration_plan.md  015_claim_page_implementation.md  016_phase2_integration_testing.md  017_admin_tabs_claim_ux_nft_fallback.md  018_scanner_fix_claim_ux_deploy.md  019_landing_page.md  020_horizontal_scroll_refactoring_clippy.md  021_quiz_gated_claim_flow.md  022_multi_event_management.md  023_landing_page_swimlane.md  024_rust_adventures_game.md  025_security_audit_e2e_nft_config.md  026_cnft_mint_fix_and_e2e.md
.issues/: 001_deposit_commitment_refund.md  002_quiz_gated_claim.md  003_admin_quiz_ui.md  004_multi_event_management.md  005_growth_marketing_plan.md  006_rust_adventures.md  007_devnet_e2e_test.md  008_nft_config_and_production_readiness.md
.wrangler/cache/: cf.json  wrangler-account.json
.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/config/: mod.rs  types.rs
domain/src/models/: adventure.rs  api.rs  attendee.rs  event.rs  mod.rs
domain/src/qr/: generator.rs  mod.rs
frontend/: admin.html  index.html  staff.html
frontend-leptos/: .gitignore  Cargo.toml  Trunk.toml  build.sh  index.html  style.css
frontend-leptos/js/: confetti.js  qr_generate.js  scanner.js
frontend-leptos/src/: api.rs  auth.rs  components.rs  lib.rs  main.rs  utils.rs
frontend-leptos/src/pages/: admin.rs  adventure_config.rs  claim.rs  demo.rs  events_page.rs  landing.rs  login.rs  mod.rs  quiz_editor.rs  scanner.rs
frontend-leptos/src/pages/adventure/: engine.rs  mod.rs  page.rs  types.rs
frontend/css/: style.css
frontend/js/: admin.js  app.js  scanner.js
ontime/: SETUP-GUIDE.md  solana-dev-thailand-26apr.csv  team-links.html
scripts/cnft/: Cargo.toml  README.md
scripts/cnft/keys/: .gitignore
scripts/cnft/src/: config.rs  main.rs
scripts/cnft/src/commands/: airdrop.rs  balance.rs  create_tree.rs  mint.rs  mod.rs  tree_info.rs
scripts/e2e/: test_devnet.sh  test_full_e2e.sh
src/: main.rs
src/auth/: google.rs  jwt.rs  mod.rs
src/config/: mod.rs  types.rs
src/handlers/: attendee.rs  auth.rs  checkin.rs  health.rs  mod.rs  qr.rs
src/middleware/: mod.rs  security.rs
src/models/: api.rs  attendee.rs  auth.rs
src/qr/: generator.rs  mod.rs
src/sheets/: client.rs  mod.rs
worker/: Cargo.toml  deploy.sh  package-lock.json  package.json  quiz.json  wrangler.toml
worker/src/: adventure.rs  auth.rs  crypto.rs  event_store.rs  http.rs  lib.rs  middleware.rs  quiz.rs  sheets.rs  solana.rs  state.rs
worker/src/handlers/: adventure.rs  attendee.rs  auth.rs  checkin.rs  claim.rs  events.rs  health.rs  metadata.rs  mod.rs  qr.rs  quiz.rs  waitlist.rs
