[package]
name = "event-checkin"
version = "0.1.0"
edition = "2024"
description = "Event QR check-in system with Google Sheets integration"
default-run = "event-checkin"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Google API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Auth & JWT
jsonwebtoken = "9"
base64 = "0.22"

# QR Code generation
qrcode = "0.14"

# Environment & Config
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# URL handling
url = "2"
urlencoding = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
rsa = { version = "0.9", features = ["sha2"] }
pkcs1 = "0.7"
pem = "3"
sha2 = "0.10"
rand = "0.8"

# UUID
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
axum-test = "16"
