[workspace]
members = ["domain", "worker", "."]
exclude = ["frontend-leptos"]
resolver = "2"

[package]
name = "event-checkin"
version = "0.1.0"
edition = "2024"
description = "Event QR check-in system with Google Sheets integration"
default-run = "event-checkin"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Google API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Auth & JWT
jsonwebtoken = "9"
base64 = "0.22"

# QR Code generation
qrcode = "0.14"

# Environment & Config
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2"
urlencoding = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
rsa = { version = "0.9", features = ["sha2"] }
pem = "3"
sha2 = "0.10"

# Shared domain
event-checkin-domain = { path = "domain" }

[dev-dependencies]
axum-test = "16"
tower = "0.5"

[profile.release]
lto = "thin"
strip = true
