[package]
name = "event-checkin-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "HtmlVideoElement",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "Navigator",
  "Window",
  "HtmlElement",
  "HtmlInputElement",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = "0.11"
console_log = "1"
log = "0.4"
