[package]
name = "event-checkin-frontend"
version = "0.2.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "Element",
  "HtmlVideoElement",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "Navigator",
  "Node",
  "Url",
  "Window",
  "HtmlElement",
  "HtmlInputElement",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = { version = "0.11", features = ["futures"] }
console_log = "1"
log = "0.4"

[workspace]
